<resources>
    <string name="app_name">SMPN 4 KARANGANYAR</string>
    <string name="kepsek">Nama :Dra. Endang W, M.Pd\nNIP :19621220xxxxxxxxxx\nGol :IV/b\nMapel :Bhs. Indonesia\nTugas :Kepala Sekolah</string>
    <string name="pelaksanasatu">Nama:Tuti Saraswati, S.E\nNIP:1967102419xxxxxxxx\nGol:III/d\nTMT:01/04/2017\nJab.:Pelaksana</string>
    <string name="pelaksanadua">Nama : Sri Hartuti, S.Sos\nNIP : 1965092619xxxxxxxx\nGol : III/c\nTMT : 01/10/2016\nJab. : Pelaksana</string>
    <string name="pelaksana3">Nama : Sukoco\nNIP : 1978062620xxxxxxxx\nGol : II/b\nTMT : 01/10/2018\nJab. : Pelaksana</string>
    <string name="kesiswaan">Nama : Eka Sumaryani\nNIP : -\nGol : -\nTMT : 01/09/2005\nJab. : Adm. Kesiswaan</string>
    <string name="petugasperpus">Nama : Dewi Suryandari\nNIP : -\nGol : -\nTMT : 01/01/2007\nJab. : Ptg. Perpustakaan</string>
    <string name="operator">Nama : Pujiastuti\nNIP : -\nGol : -\nTMT : 01/01/2012\nJab. : Operator Dapodik</string>
    <string name="persuratan">Nama : Indriana Yuniatin, SE\nNIP : -\nGol : -\nTMT :\nJab. : Adm. Persuratan</string>
    <string name="kebersihan">Nama : M. Wahyu Kartiko\nNIP : -\nGol : -\nTMT : 01/12/2018\nJab. : Ptg. Kebersihan</string>
    <string name="kebersihandua">Nama : Sugiman\nNIP : -\nGol : -\nTMT : 02/01/2019\nJab. : Ptg. Kebersihan</string>
    <string name="satpam">Nama : Kasiman\nNIP : -\nGol : -\nTMT : 01/07/2014\nJab. : Satpam</string>
    <string name="ipa">Nama : Endang P, M.Pd\nNIP : 1964090419xxxxxxxx\nGol : IV/b\nMapel : IPA\nTugas : Guru</string>
    <string name="nama_nip_gol_mapel_tugas_fx_suranto_s_pd_1974013119xxxxxxxx_iv_b_ipa_guru">Nama : Fx. Suranto, S.Pd\nNIP : 1974013119xxxxxxxx\nGol : IV/b\nMapel :IPA\nTugas : IPA Guru</string>
    <string name="penjas">Nama : Sudarmi, S.Pd\nNIP : 1962080119xxxxxxxx\nGol : IV/a\nMapel : Penjas Orkes\nTugas : Guru</string>
    <string name="ppkn">Nama : Suheksi, S.Pd\nNIP : 1962061719xxxxxxxx\nGol : IV/a\nMapel : PPKn\nTugas : Guru</string>
    <string name="bahasainggris">Nama : Heru Wahyudi E, M.Pd\nNIP : 1963030819xxxxxxxx\nGol : IV/a\nMapel : Bhs. Inggris\nTugas : Guru, Sarpras-Humas</string>
    <string name="bhsindo">Nama : Nurul Aini, S.Pd\nNIP : 1962091119xxxxxxxx\nGol : IV/a\nMapel : Bhs.Indonesia\nTugas : Guru</string>
    <string name="bahasajawa">Nama : Jumiyati, S.Pd, M.Pd\nNIP : 1965112619xxxxxxxx\nGol : IV/a\nMapel : Bhs. Jawa\nTugas : Guru</string>
    <string name="prakarya">Nama : Wahyu Ariyani, S.Pd\nNIP : 1963102719xxxxxxxx\nGol : IV/a\nMapel : TIK, Prakarya\nTugas : Guru</string>
    <string name="matematika">Nama : Suharyatmi, S.Pd\nNIP : 1963022519xxxxxxxx\nGol : IV/a\nMapel : Matematika\nTugas : Guru</string>
    <string name="bhsindodua">Nama : Sumarni, S.Pd\nNIP : 1963090819xxxxxxxx\nGol : IV/a\nMapel : Bhs.Indonesia\nTugas : Guru</string>
    <string name="matematikadua">Nama : Tri Wilasiati, S.Pd\nNIP : 1966081519xxxxxxxx\nGol : IV/a\nMapel : Matematika\nTugas : Guru</string>
    <string name="ipatiga">Nama : Dra. Keksi Hastuti\nNIP : 1968032319xxxxxxxx\nGol : IV/a\nMapel : IPA\nTugas : Guru,Kurikulum</string>
    <string name="bhsindotiga">Nama : Dra. Suparwi\nNIP : 1967042619xxxxxxxx\nGol : IV/a\nMapel : Bhs. Indonesia\nTugas : Guru</string>
    <string name="bp">Nama : Surani, S.Pd\nNIP : 1968012119xxxxxxxx\nGol : IV/a\nMapel : BP/BK\nTugas : Guru</string>
    <string name="ppkndua">Nama : Rina Juli S, S.Pd\nNIP : 1970071319xxxxxxxx\nGol : IV/a\nMapel : PPKn\nTugas : Guru</string>
    <string name="matematikatiga">Nama : Sabar Santosa, M.Pd\nNIP : 1967102519xxxxxxxx\nGol : IV/a\nMapel : Matematika\nTugas : Guru</string>
    <string name="bpdua">Nama : Suyanto, S.Pd\nNIP : 1966122119xxxxxxxx\nGol : IV/a\nMapel : BP/BK\nTugas : Guru</string>
    <string name="agama">Nama : Wiwik Nur H, S.Ag\nNIP : 1971092719xxxxxxxx\nGol : IV/a\nMapel : Pend. Agama Islam\nTugas : Guru</string>
    <string name="ipaempat">Nama : Herwandani, S.Pd\nNIP : 1969052319xxxxxxxx\nGol : IV/a\nMapel : IPA\nTugas : Guru</string>
    <string name="matematikaempat">Nama : Adif Muhtar, S.Pd\nNIP : 1969072319xxxxxxxx\nGol : IV/a\nMapel : Matematika\nTugas : Guru</string>
    <string name="ips">Nama : Sutaryono, S.Pd\nNIP : 1971122719xxxxxxxx\nGol : IV/a\nMapel : IPS\nTugas : Guru,Kesiswaan</string>
    <string name="bhsjawadua">Nama : Kartini, S.Pd\nNIP : 1968040919xxxxxxxx\nGol : IV/a\nMapel : Bhs.Jawa\nTugas : Guru</string>
    <string name="prakaryadua">Nama : Widodo, S.Pd\nNIP : 1970082419xxxxxxxx\nGol : IV/a\nMapel : TIK, Prakarya\nTugas : Guru</string>
    <string name="olahragadua">Nama : Dra. Sri Mulyani\nNIP : 1965090319xxxxxxxx\nGol : IV/a\nMapel : Penjas Orkes\nTugas : Guru</string>
    <string name="olahragatiga">Nama : Dra. Sri Mulyani NIP : 1965090319xxxxxxxx Gol : IV/a Mapel : Penjas Orkes Tugas : Guru</string>
    <string name="bhsindoempat">Nama : Chusniah Zahara, S.Pd\nNIP : 1965061919xxxxxxxx\nGol : IV/a\nMapel : Bhs. Indonesia\nTugas : Guru</string>
    <string name="ipsdua">Nama : Budiasih Yuli R, S.Pd\nNIP : 1973072819xxxxxxxx\nGol : IV/a\nMapel : IPS\nTugas : Guru</string>
    <string name="bhsinggris">Nama : Dra. Eka Asri ASRD\nNIP : 1968112320xxxxxxxx\nGol : IV/a\nMapel : Bhs. Inggris\nTugas : Guru</string>
    <string name="ipstiga">Nama : Anik H, S.Pd, M.Pd\nNIP : 1972011120xxxxxxxx\nGol : III/d\nMapel : IPS\nTugas : Guru</string>
    <string name="senibudaya">Nama : Trubus S, S.Sn\nNIP : 1975092520xxxxxxxx\nGol : III/d\nMapel : Seni Budaya\nTugas : Guru</string>
    <string name="ipsempat">Nama : Sri Suryaningsih, S.Pd\nNIP : 1973080120xxxxxxxx\nGol : III/d\nMapel : IPS\nTugas : Guru</string>
    <string name="bhsindolima">Nama : Dra. Sri Pramesti\nNIP : 1970022320xxxxxxxx\nGol : III/c\nMapel : Bhs. Indonesia\nTugas : Guru</string>
    <string name="bhsindoenam">Nama : Karlina W, S.Pd\nNIP : 1965062820xxxxxxxx\nGol : III/c\nMapel : Bhs. Indonesia\nTugas : Guru</string>
    <string name="ppkntiga">Nama : Umi Barokatun, S.Pd\nNIP : 1968022020xxxxxxxx\nGol : III/c\nMapel : PPKn\nTugas : Guru</string>
    <string name="bhsinggrisdua">Nama : Surip Wijiyati, S.Pd\nNIP : 1973030420xxxxxxxx\nGol : III/c\nMapel : Bhs. Inggris\nTugas : Guru</string>
    <string name="gurukristen">Nama : Sih Sarwanti, S.Th\nNIP : 1966062720xxxxxxxx\nGol : III/c\nMapel : Pend. Agama Kristen\nTugas : Guru</string>
    <string name="ipalima">Nama : Prapti H, S.Pd\nNIP : 1977050520xxxxxxxx\nGol : III/c\nMapel : IPA\nTugas : Guru, Kep. Perpust</string>
    <string name="matematikalima">Nama : Didik WK, S.Pd, M.Pd\nNIP : 1979052720xxxxxxxx\nGol : III/c\nMapel : Matematika\nTugas : Guru</string>
    <string name="prakaryatiga">Nama : Endah Aryanti, S.Pd\nNIP : 1978083020xxxxxxxx\nGol : III/c\nMapel : Prakarya\nTugas : Guru</string>
    <string name="senibudayadua">Nama : Indri Nuraini, S.Sn\nNIP : 1981012920xxxxxxxx\nGol : III/b\nMapel : Seni Budaya\nTugas : Guru</string>
    <string name="ptgsperpus">Nama : Rindi Apriani\nNIP : -\nGol : -\nTMT : 01/09/2016\nJab. : Ptg. Perpustakaan</string>
    <string name="olahragaempat">Nama : Tumini, S.Pd\nNIP : 1977021920xxxxxxxx\nGol : III/a\nMapel : Penjas Orkes\nTugas : Guru</string>
    <string name="bhsinggristiga">Nama : Andi O. Mabete, S.Pd\nNIP : 1984101420xxxxxxxx\nGol : III/b\nMapel : Bhs. Inggris\nTugas : Guru</string>
    <string name="agamadua">Nama : Adityo Eko K, S.Pd.I.\nNIP : -\nGol : -\nMapel : Pend. Agama Islam\nTugas : Guru</string>
    <string name="katolik">Nama :Y. Siswanti Puji R\nNIP :1965051520xxxxxxxx\nGol :III/b\nMapel :P. Agama Katholik\nTugas :Guru</string>
    <string name="hindu">Nama :Gayatri Sindi Mahesti\nNIP :-\nGol :-\nMapel :Pend. Agama Hindu\nTugas :Guru</string>
    <string name="tujuanpmr">Tujuan Kegiatan:\nMenjadi Wadah Remaja PMI\nMendidik Calon Relawan Masa Depan\nMempersiapkan Calon PMI\nMengajarkan Hidup Sehat\nMelatih Jiwa Kemanusiaan\nMemberi Pertolongan Pertama Di Tingkat Sekolah\nMelatih Keterampilan\nMelatih Kedisiplinan\nMengajarkan Ilmu Kesehatan</string>
    <string name="pelaksanaa">Waktu Kegiatan\nHari : Senin\nJam : 15.00 - 17.00 WIB</string>
    <string name="pelaksanapramuka">Waktu Pelaksanaan Kegiatan\nHari : Jum\'at dan Sabtu\nJam : 15.00 – 17.00 WIB</string>
    <string name="tujuanbasket">Tujuan Kegiatan:\nMemberikan kesempatan pada siswa untuk mengembangkan bakat dan minat pada Bola Basket.\nMemberikan pembinaan pada siswa untuk menjadi pemain Basket yang berkualitas.\nMelatih disiplin, kerjasama tim, bertindak cepat dan terorganisir.</string>
    <string name="pelaksanabasket">Pelaksanaan Kegiatan\nHari : Selasa dan Kamis\nJam : 14.00 - 16.00 WIB</string>
    <string name="Masjid">MASJID\nIbadah adalah kebutuhan dasar setiap kaum muslim dan seiring dengan bertambahnya jumlah siswa/siswi yang sebagian besar beragama Islam berimbas pada kebutuhan sarana ibadah berupa Masjid.</string>
    <string name="perpustakaan">PERPUSTAKAAN\nFasilitas ruang perpustakaan siswa,meja dan kursi layanan,meja dan kursi baca,serta seperangkattempat dan alat produksi bahan pustaka.</string>
    <string name="labkomputer">LAB KOMPUTER\nLab. Komputer merupakan fasilitas yang disediakan oleh sekolah yang berfungsi untuk menunjang terlaksananya Proses Belajar Mengajar (PBM). Komputer Sekolah, bukan hanya untuk sekedar pelengkap PBM atau bukan hanya untuk sekedar Update Status Facebook maupun Twitter bisa juga berfungsi untuk siswa siswi kelas IX bisa digunakan sebagai UNBK atau Ujian yang lain menggunakan komputer."</string>
    <string name="komputer">LAB KOMPUTER\nLab. Komputer merupakan fasilitas yang disediakan oleh sekolah yang berfungsi untuk menunjang terlaksananya Proses Belajar Mengajar (PBM). Komputer Sekolah, bukan hanya untuk sekedar pelengkap PBM atau bukan hanya untuk sekedar Update Status Facebook maupun Twitter bisa juga berfungsi untuk siswa siswi kelas IX bisa digunakan sebagai UNBK atau Ujian yang lain menggunakan komputer.</string>
    <string name="labipa">LAB IPA\nLaboratorium SMPN 4 KARANGANYAR terdiri dari Lab Fisika,Kimia dan Biologi,masing-masing terdiri dari dua lokal digunakan kegiatan PBM sekaligus praktikum untuk siswa.</string>
    <string name="upacara">Upacara Bendera\nUpacara bendera merupakan salah satu kegiatan penting yang sering dilakukan di sekolah. Umumnya, upacara bendera dilaksanakan pada hari Senin dan hari-hari tertentu, seperti peringatan Hari Kemerdekaan Indonesia. Meskipun sudah sering dilakukan, namun tidak sedikit pelajar yang belum mengerti tujuan upacara bendera itu sendiri. Salah satu poin penting tujuan upacara bendera ialah menumbuhkan rasa nasionalisme anak bangsa. Nasionalisme merupakan jiwa bangsa Indonesia yang harus melekat selama negara ini masih berdiri. Oleh karena itu, upacara bendera menjadi salah satu kegiatan penting untuk membentuk karakter bangsa.</string>
    <string name="jumatreligi">JUMAT RELIGI\nDalam rangka mewujudkan Visi dan Misi khususnya misi poin nomor 1, yaitu</string>
    <string name="ruang_kelas_suatu_ruangan_dalam_bangunan_sekolah_yang_berfungsi_sebagai_tempat_untuk_kegiatan_tatap_muka_dalam_proses_kegiatan_belajar_mengajar_kbm_mebeler_dalam_ruangan_ini_terdiri_dari_meja_siswa_kursi_siswa_meja_guru_lemari_kelas_papan_tulis_serta_aksesoris_ruangan_lainnya_yang_sesuai">RUANG KELAS\nSuatu ruangan dalam bangunan sekolah, yang berfungsi sebagai tempat untuk kegiatan tatap muka dalam proses kegiatan belajar mengajar (KBM). Mebeler dalam ruangan ini terdiri dari meja siswa, kursi siswa, meja guru, lemari kelas, papan tulis, serta aksesoris ruangan lainnya yang sesuai</string>
    <string name="toilet">TOILET\nToliet SMPN 4 Karangnayar terdiri dari 2 putra dan dua putri disebelah masjid, terdapat juga toilet dibelakang dekat parkiran sepeda,toilet dibedakan antara laki-laki dan perempuan, dan terdapat juga toilet khusus guru yang berada disebelah selatan masjid</string>
</resources>