<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".MainActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="60">


        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/masjidsmp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal"
            android:id="@+id/osissatu"
            android:background="@drawable/bakron">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Masjid"
            android:typeface="serif"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/text1"
            android:textStyle="bold"
            android:textColor="#000000"/>
        </LinearLayout>


        <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/perpustakaan2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal"
            android:id="@+id/perpus"
            android:background="@drawable/bakron">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perpustakaan"
                android:typeface="serif"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/text2"
                android:textStyle="bold"
                android:textColor="#000000"/>
        </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/labkomputer"
        android:layout_marginTop="9dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal"
            android:id="@+id/labkomputer"
            android:background="@drawable/bakron">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/komputer"
                android:typeface="serif"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/text4"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/labipa"
        android:layout_marginTop="9dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal"
            android:id="@+id/labipa"
            android:background="@drawable/bakron">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labipa"
                android:typeface="serif"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/text5"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>






    </GridLayout>
</ScrollView>

