<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/staftu"
    tools:context=".staftu">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="60">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" STAF TU "
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textAlignment="center"
            android:id="@+id/teks1"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginTop="30dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/pelaksanasatu" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pelaksanasatu"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/pelaksana2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pelaksanadua"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/pelaksanatiga" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pelaksana3"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/petugasperpus" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petugasperpus"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/operator" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operator"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/satpam" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satpam"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/pelaksanadelapan" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ptgsperpus"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/pelaksana9" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/persuratan"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/ptgkebersihan" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kebersihan"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:src="@drawable/ptgskebersihandua" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kebersihandua"
                    android:textColor="#000000"
                    android:layout_marginStart="40dp"
                    android:textAlignment="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</ScrollView>